fix login too wide

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,8 @@
   display: flex;
   flex-direction: column;
   padding: 2em;
+  max-width: 30rem;
+  margin: auto;
 }
 
 .form {
